--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "i18next": "^25.1.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
+    "marked": "^16.1.2",
     "motion": "^12.17.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
