--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
   "devDependencies": {
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "esbuild": "0.25.4",
     "esbuild-style-plugin": "^1.6.3",
     "postcss": "^8.5.3",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.9.3"
   }
 }
